Issues + Associated Content Style Updates
- Issues: Terms of Use and Privacy Policy #157 (external link USPTO Style + Section 508 assoc.), Informational Message for Owner Information #401 (Owner Info + Owner Information, NOTE: these are the only local owner pages, only updates locally)
- update a11y jQuery for Toggle TEAs
- a:hover, a:active update
- ‘opens in new window’ icon update
- max-width on intro text for legibility
- ‘opens in new window’ sr-only
- goodserv video link height
- checkbox label adjustment for instances where there are links in the label
- remove tooltip hover underline styling

--- a/attorney_info_M010.html
+++ b/attorney_info_M010.html
@@ -859,6 +859,10 @@
                                                         <td tabindex="0" class="list-group-item col-xs-6"><a href="#" class="fromcontact" id="jacob"><span class="glyphicon glyphicon-plus-sign" role="img" aria-label="select this contact"></span></a> Jacob Goldstein</td>
                                                         <td tabindex="0" class="list-group-item col-xs-6">jacob.goldstein@us.gt.com</td>
                                                     </tr>
+                                                    <tr role="row">
+                                                        <td tabindex="0" class="list-group-item col-xs-6"><a href="#" class="fromcontact" id="jacob"><span class="glyphicon glyphicon-plus-sign" role="img" aria-label="select this contact"></span></a> Li Zhang</td>
+                                                        <td tabindex="0" class="list-group-item col-xs-6">li.zhang@us.gt.com</td>
+                                                    </tr>
                                                	</tbody>
                                             </table>
                                     	</td>
