--- a/marks_layout_M017.html
+++ b/marks_layout_M017.html
@@ -200,7 +200,7 @@
                                                     <h4 class="modal-title" id="certmodallabel">Certification Mark</h4>
                                                   </div>
                                                   <div class="modal-body">
-                                                    <p>A certification mark is a type of trademark that is used to show consumers that particular goods and/or services, or their providers, have met certain standards. (<a href="https://tmep.uspto.gov/RDMS/TMEP/current#/current/TMEP-1300d1e585.html" target="_blank">See TMEP Section 1306</a>)</p>
+                                                    <p>A certification mark is a type of trademark that is used to show consumers that particular goods and/or services, or their providers, have met certain standards. (<a href="https://tmep.uspto.gov/RDMS/TMEP/current#/current/TMEP-1300d1e585.html" target="_blank">See TMEP Section 1306<span class="sr-only">Opens in new window</span><span class="glyphicon glyphicon-new-window" aria-hidden="true"></span></a>)</p>
                                                   </div>
                                                   <div class="modal-footer">
                                                     <button type="button" class="btn btn-sm btn-success" data-dismiss="modal">Close</button>
@@ -219,7 +219,7 @@
                                                     <h4 class="modal-title" id="collectmodallabel">Collective Mark</h4>
                                                   </div>
                                                   <div class="modal-body">
-                                                    <p>A collective mark is mark used by members of a collective organization to identify their goods and/or services and distinguish them from the goods and/or services of non-members. (<a href="https://tmep.uspto.gov/RDMS/TMEP/current#/current/TMEP-1300d1e347.html" target="_blank">See TMEP Section 1303</a>)</p>                                           </div>
+                                                    <p>A collective mark is mark used by members of a collective organization to identify their goods and/or services and distinguish them from the goods and/or services of non-members. (<a href="https://tmep.uspto.gov/RDMS/TMEP/current#/current/TMEP-1300d1e347.html" target="_blank">See TMEP Section 1303</a><span class="sr-only">Opens in new window</span><span class="glyphicon glyphicon-new-window" aria-hidden="true"></span></a>)</p>                                           </div>
                                                   <div class="modal-footer">
                                                     <button type="button" class="btn btn-sm btn-success" data-dismiss="modal">Close</button>
                                                   </div>
@@ -237,7 +237,7 @@
                                                     <h4 class="modal-title" id="collectmemberlabel">Collective Membership Mark</h4>
                                                   </div>
                                                   <div class="modal-body">
-                                                    <p>A collective membership mark is a mark used by the members of a particular organization to signify that they are members of that organization (e.g., a social club or labor union). (<a href="https://tmep.uspto.gov/RDMS/TMEP/current#/current/TMEP-1300d1e417.html" target="_blank">See TMEP Section 1304</a>)</p>
+                                                    <p>A collective membership mark is a mark used by the members of a particular organization to signify that they are members of that organization (e.g., a social club or labor union). (<a href="https://tmep.uspto.gov/RDMS/TMEP/current#/current/TMEP-1300d1e417.html" target="_blank">See TMEP Section 1304</a><span class="sr-only">Opens in new window</span><span class="glyphicon glyphicon-new-window" aria-hidden="true"></span></a>)</p>
                                                   </div>
                                                   <div class="modal-footer">
                                                     <button type="button" class="btn btn-sm btn-success" data-dismiss="modal">Close</button>
@@ -268,7 +268,7 @@
                                                                 <h3>Standard Character</h3>
                                                             </div>
                                                             <div class="col-xs-4">
-                                                                <a href="marks_examples.html#standard" target="_blank" class="right">Examples</a>
+                                                                <a href="marks_examples.html#standard" target="_blank" class="right">Examples<span class="sr-only">Opens in new window</span><span class="glyphicon glyphicon-new-window" aria-hidden="true"></span></a>
                                                             </div>
                                                         </div>
                                                        </div>
@@ -290,7 +290,7 @@
                                                                 <h3>Stylized</h3>
                                                             </div>
                                                             <div class="col-xs-4">
-                                                                <a href="marks_examples.html#stylized" target="_blank" class="right">Examples</a>
+                                                                <a href="marks_examples.html#stylized" target="_blank" class="right">Examples<span class="sr-only">Opens in new window</span><span class="glyphicon glyphicon-new-window" aria-hidden="true"></span></a>
                                                             </div>
                                                         </div>
                                                    </div>
@@ -314,7 +314,7 @@
                                                                 <h3>Design Only</h3>
                                                             </div>
                                                             <div class="col-xs-4">
-                                                                <a href="marks_examples.html#designonly" target="_blank" class="right align-middle">Examples</a>
+                                                                <a href="marks_examples.html#designonly" target="_blank" class="right align-middle">Examples<span class="sr-only">Opens in new window</span><span class="glyphicon glyphicon-new-window" aria-hidden="true"></span></a>
                                                             </div>
                                                         </div>
                                                    </div>
@@ -333,7 +333,7 @@
                                                                 <h3>Design with Text</h3>
                                                             </div>
                                                             <div class="col-xs-4">
-                                                                <a href="marks_examples.html#designwithtext" target="_blank" class="right align-middle">Examples</a>
+                                                                <a href="marks_examples.html#designwithtext" target="_blank" class="right align-middle">Examples<span class="sr-only">Opens in new window</span><span class="glyphicon glyphicon-new-window" aria-hidden="true"></span></a>
                                                             </div>
                                                         </div>
                                                    </div>
@@ -359,7 +359,7 @@
                                                                                 <h3>Configuration 3D</h3>
                                                                             </div>
                                                                             <div class="col-xs-4">
-                                                                                <a href="marks_examples.html#configuration3d" target="_blank" class="right align-middle">Examples</a>
+                                                                                <a href="marks_examples.html#configuration3d" target="_blank" class="right align-middle">Examples<span class="sr-only">Opens in new window</span><span class="glyphicon glyphicon-new-window" aria-hidden="true"></span></a>
                                                                             </div>
                                                                         </div>
                                                                    </div>
@@ -378,7 +378,7 @@
                                                                                 <h3>Configuration 3D with Text</h3>
                                                                             </div>
                                                                             <div class="col-xs-4">
-                                                                                <a href="marks_examples.html#configuration3dtext" target="_blank" class="right align-middle">Examples</a>
+                                                                                <a href="marks_examples.html#configuration3dtext" target="_blank" class="right align-middle">Examples<span class="sr-only">Opens in new window</span><span class="glyphicon glyphicon-new-window" aria-hidden="true"></span></a>
                                                                             </div>
                                                                        </div>
                                                                    </div>
@@ -399,7 +399,7 @@
                                                                             <h3>Sound</h3>
                                                                         </div>
                                                                         <div class="col-xs-4">
-                                                                            <a href="marks_examples.html#sound" target="_blank" class="right align-middle">Examples</a>
+                                                                            <a href="marks_examples.html#sound" target="_blank" class="right align-middle">Examples<span class="sr-only">Opens in new window</span><span class="glyphicon glyphicon-new-window" aria-hidden="true"></span></a>
                                                                         </div>
                                                                    </div>
                                                                    </div>
@@ -418,7 +418,7 @@
                                                                             <h3>Sound Composite</h3>
                                                                         </div>
                                                                         <div class="col-xs-4">
-                                                                            <a href="marks_examples.html#soundcomposite" target="_blank" class="right align-middle">Examples</a>
+                                                                            <a href="marks_examples.html#soundcomposite" target="_blank" class="right align-middle">Examples<span class="sr-only">Opens in new window</span><span class="glyphicon glyphicon-new-window" aria-hidden="true"></span></a>
                                                                         </div>
                                                                    </div>
                                                                    </div>
@@ -439,7 +439,7 @@
                                                                             <h3>Scent</h3>
                                                                         </div>
                                                                         <div class="col-xs-4">
-                                                                            <a href="marks_examples.html#scent" target="_blank" class="right align-middle">Examples</a>
+                                                                            <a href="marks_examples.html#scent" target="_blank" class="right align-middle">Examples<span class="sr-only">Opens in new window</span><span class="glyphicon glyphicon-new-window" aria-hidden="true"></span></a>
                                                                         </div>
                                                                    </div>
                                                                    </div>
@@ -458,7 +458,7 @@
                                                                                 <h3>Tactile</h3>
                                                                             </div>
                                                                             <div class="col-xs-4">
-                                                                            <a href="marks_examples.html#tactile" target="_blank" class="right align-middle">Examples</a>
+                                                                            <a href="marks_examples.html#tactile" target="_blank" class="right align-middle">Examples<span class="sr-only">Opens in new window</span><span class="glyphicon glyphicon-new-window" aria-hidden="true"></span></a>
                                                                             </div>
                                                                        </div>
                                                                    </div>
@@ -479,7 +479,7 @@
                                                                                 <h3>Color Only</h3>
                                                                             </div>
                                                                             <div class="col-xs-4">
-                                                                                <a href="marks_examples.html#coloronly" target="_blank" class="right align-middle">Examples</a>
+                                                                                <a href="marks_examples.html#coloronly" target="_blank" class="right align-middle">Examples<span class="sr-only">Opens in new window</span><span class="glyphicon glyphicon-new-window" aria-hidden="true"></span></a>
                                                                             </div>
                                                                        </div>
                                                                    </div>
@@ -498,7 +498,7 @@
                                                                                 <h3>Motion</h3>
                                                                             </div>
                                                                             <div class="col-xs-4">
-                                                                                <a href="marks_examples.html#motion" target="_blank" class="right align-middle">Examples</a>
+                                                                                <a href="marks_examples.html#motion" target="_blank" class="right align-middle">Examples<span class="sr-only">Opens in new window</span><span class="glyphicon glyphicon-new-window" aria-hidden="true"></span></a>
                                                                             </div>
                                                                        </div>
                                                                    </div>
@@ -519,7 +519,7 @@
                                                                                 <h3>Motion with Text</h3>
                                                                             </div>
                                                                             <div class="col-xs-4">
-                                                                                <a href="marks_examples.html#motionwithtext" target="_blank" class="right align-middle">Examples</a>
+                                                                                <a href="marks_examples.html#motionwithtext" target="_blank" class="right align-middle">Examples<span class="sr-only">Opens in new window</span><span class="glyphicon glyphicon-new-window" aria-hidden="true"></span></a> 
                                                                             </div>
                                                                        </div>
                                                                    </div>
@@ -538,7 +538,7 @@
                                                                                 <h3>Other</h3>
                                                                             </div>
                                                                             <div class="col-xs-4">
-                                                                                <a href="marks_examples.html#other" target="_blank" class="right align-middle">Examples</a>
+                                                                                <a href="marks_examples.html#other" target="_blank" class="right align-middle">Examples<span class="sr-only">Opens in new window</span><span class="glyphicon glyphicon-new-window" aria-hidden="true"></span></a>
                                                                             </div>
                                                                        </div>
                                                                    </div>
