--- a/goods_and_services_video_M1.html
+++ b/goods_and_services_video_M1.html
@@ -172,7 +172,7 @@
                     <!--START goods and services table-->
                     <div class="row">
                     	<div class="col-xs-12 col-sm-6 col-md-6 col-lg-6 bgimg img-fluid">
-                        	<a href="https://youtu.be/H0LI1t5mn8M" target="_blank" class="btn btn-block"></a>
+                        	<a href="https://youtu.be/H0LI1t5mn8M" target="_blank" class="btn btn-block"><span class="sr-only">Opens in new window</span></a>
                         </div>
                         <div class="col-xs-12 col-sm-6 col-md-6 col-lg-6">
                         	<p class="weight600" id="selectgss">Search through and select the goods and services that apply to your trademark, or provide a list.</p>
