--- a/marks_standard_character.html
+++ b/marks_standard_character.html
@@ -188,7 +188,7 @@
                                         <div class="row">
                                             <section aria-label="mark text">
                                             	<div class="col-xs-12">
-                                                	<p>Enter the word(s), letter(s) and/or number(s) you wish to register, e.g., <span class="uppercase">the cat&#8217;s meow</span>. Entries in this field must be found in the <a href="https://www.uspto.gov/trademark/standard-character-set">USPTO standard character set</a>. <span class="required weight600">&#42;</span></p>
+                                                	<p>Enter the word(s), letter(s) and/or number(s) you wish to register, e.g., <span class="uppercase">the cat&#8217;s meow</span>. Entries in this field must be found in the <a href="https://www.uspto.gov/trademark/standard-character-set" target="_blank">USPTO standard character set<span class="sr-only">Opens in new window</span><span class="glyphicon glyphicon-new-window" aria-hidden="true"></span></a>. <span class="required weight600">&#42;</span></p>
                                                 </div>
                                                 <div class="col-xs-12 col-md-6 form-group form-group-md" id="entertext">
                                                     <label for="ta2" class="sr-only">Enter mark text</label> 
@@ -212,7 +212,7 @@
                                                     </div>
                                                     <div id="translation" class="collapse Accordion-panel" role="region" aria-labelledby="translationbtn">
                                                         <div class="Accordion">
-                                                            <p>A translation of a trademark is the meaning in English of any non-English wording. Every application to register a trademark that includes non-English wording must include a translation of that wording. <a href="https://tmep.uspto.gov/RDMS/TMEP/current#/current/TMEP-800d1e2300.html" target="_blank">More information</a>.</p>
+                                                            <p>A translation of a trademark is the meaning in English of any non-English wording. Every application to register a trademark that includes non-English wording must include a translation of that wording. <a href="https://tmep.uspto.gov/RDMS/TMEP/current#/current/TMEP-800d1e2300.html" target="_blank">More information<span class="sr-only">Opens in new window</span><span class="glyphicon glyphicon-new-window" aria-hidden="true"></span></a>.</p>
                                                         </div>
                                                     </div>
                                                     <div>
@@ -272,12 +272,11 @@
                                                     </div>
                                                     <div id="nps" class="collapse Accordion-panel" role="region" aria-labelledby="npsbtn">
                                                         <div class="Accordion">
-                                                            <p>If a name(s) shown in the mark identifies a particular living individual, enter the name of the individual being identified. In addition, attach a .jpg or .pdf file showing the actual consent of the named individual to the use and registration of his or her name. Select &#8220;No&#8221; if the mark includes a name(s) but this does NOT identify a particular living person. <a href="https://tmep.uspto.gov/RDMS/TMEP/current#/current/TMEP-1200d1e4891.html" target="_blank">More information</a>.</p>
+                                                            <p>If a name(s) shown in the mark identifies a particular living individual, enter the name of the individual being identified. In addition, attach a .jpg or .pdf file showing the actual consent of the named individual to the use and registration of his or her name. Select &#8220;No&#8221; if the mark includes a name(s) but this does NOT identify a particular living person. <a href="https://tmep.uspto.gov/RDMS/TMEP/current#/current/TMEP-1200d1e4891.html" target="_blank">More information<span class="sr-only">Opens in new window</span><span class="glyphicon glyphicon-new-window" aria-hidden="true"></span></a>.</p>
                                                         </div>
                                                     </div>
                                                     <div>
-                                                        <p id="nps">Does your mark contain a name, portrait, or signature?</p>                                            			
-                                                        <div role="radiogroup" aria-labelledby="nps">
+                                                        <p id="nps">Does your mark contain a name, portrait, or signature?</p>                                                        <div role="radiogroup" aria-labelledby="nps">
                                                             <label for="inlineRadio7" class="radio-inline radiocontainer">Yes<input type="radio" name="npsradio" id="inlineRadio7" value="yes" tabindex="0"><span class="checkmark"></span></label>
                                                             <label for="inlineRadio8" class="radio-inline radiocontainer">No<input type="radio" name="npsradio" id="inlineRadio8" value="no" tabindex="0"><span class="checkmark"></span></label>
                                                         </div><!--END radiogroup-->
