--- a/marks_stylized.html
+++ b/marks_stylized.html
@@ -261,7 +261,7 @@
                                                     </div>
                                                     <div id="translation" class="collapse Accordion-panel" role="region" aria-labelledby="translationbtn">
                                                         <div class="Accordion">
-                                                            <p>A translation of a trademark is the meaning in English of any non-English wording. Every application to register a trademark that includes non-English wording must include a translation of that wording. <a href="https://tmep.uspto.gov/RDMS/TMEP/current#/current/TMEP-800d1e2300.html" target="_blank">More information</a>.</p>
+                                                            <p>A translation of a trademark is the meaning in English of any non-English wording. Every application to register a trademark that includes non-English wording must include a translation of that wording. <a href="https://tmep.uspto.gov/RDMS/TMEP/current#/current/TMEP-800d1e2300.html" target="_blank">More information<span class="sr-only">Opens in new window</span><span class="glyphicon glyphicon-new-window" aria-hidden="true"></span></a>.</p>
                                                         </div>
                                                     </div>
                                                     <div>
@@ -322,7 +322,7 @@
                                                     <div id="transliteration" class="collapse Accordion-panel" role="region" aria-labelledby="translitbtn">
                                                         <div class="Accordion">
                                                             <p>A transliteration of a trademark is the phonetic spelling, in the standard English alphabet, of the word(s) in the trademark that are in non-Latin characters. For example, if your trademark includes Chinese characters, the transliteration will state how those characters will be spelled out based on how they sound, using the English alphabet. 
- <a href="https://tmep.uspto.gov/RDMS/TMEP/current#/current/TMEP-1200d1e4891.html" target="_blank">More information</a>.</p>
+ <a href="https://tmep.uspto.gov/RDMS/TMEP/current#/current/TMEP-1200d1e4891.html" target="_blank">More information<span class="sr-only">Opens in new window</span></a><span class="glyphicon glyphicon-new-window" aria-hidden="true"></span>.</p>
                                                         </div>
                                                     </div>
                                                     <div>
@@ -382,7 +382,7 @@
                                                     </div>
                                                     <div id="nps" class="collapse Accordion-panel" role="region" aria-labelledby="npsbtn">
                                                         <div class="Accordion">
-                                                            <p>If a name(s) shown in the mark identifies a particular living individual, enter the name of the individual being identified. In addition, attach a .jpg or .pdf file showing the actual consent of the named individual to the use and registration of his or her name. Select &#8220;No&#8221; if the mark includes a name(s) but this does NOT identify a particular living person. <a href="https://tmep.uspto.gov/RDMS/TMEP/current#/current/TMEP-1200d1e4891.html" target="_blank">More information</a>.</p>
+                                                            <p>If a name(s) shown in the mark identifies a particular living individual, enter the name of the individual being identified. In addition, attach a .jpg or .pdf file showing the actual consent of the named individual to the use and registration of his or her name. Select &#8220;No&#8221; if the mark includes a name(s) but this does NOT identify a particular living person. <a href="https://tmep.uspto.gov/RDMS/TMEP/current#/current/TMEP-1200d1e4891.html" target="_blank">More information<span class="sr-only">Opens in new window</span><span class="glyphicon glyphicon-new-window" aria-hidden="true"></span></a>.</p>
                                                         </div>
                                                     </div>
                                                     <div>
