--- a/owner_info_corporation.html
+++ b/owner_info_corporation.html
@@ -167,6 +167,7 @@
                             </section>
                         </div>
                         <h1>Owner Information &#8211; Corporation</h1>
+                        <p class="leadtext weight600">All filing information is made public, including your name and address. You may provide a P.O. Box number or a business address instead of your home address, if accurate. Please see <a href="https://www.uspto.gov/trademarks-application-process/filing-online/all-trademark-data-public" target="_blank">disclosure public information<span class="sr-only">Opens in new window</span><span class="glyphicon glyphicon-new-window" aria-hidden="true"></span></a>.</p>
                         <p class="required"><span class="weight600">&#42; = Required</span></p>
                         <!--START Owner Information Form-->
                         <div class="card-text noexpand">
