Change Req. (Issue) #391 + Misc.
- File upload CSS for vertical alignment of links
- Dashboard toggle menu revert fixed
- Change Req. (Issue) #391
- Scrollbar declaration_signature.html matched in CSS to Managed Contacts scrollbar styling
- Review application, owner_info_review.html small screen view Col- specification improvement for Correspondent Information section

--- a/marks_stylized.html
+++ b/marks_stylized.html
@@ -211,7 +211,7 @@
                                     <label for="ta2">Enter the words, letters and numbers appearing in the mark. <span class="weight600">&#42;</span> <a href="#" data-toggle="tooltip" title="Any entry in this field that is not found in the mark image will not be considered part of the mark." class="glyphicon glyphicon-info-sign test" data-placement="right"></a></label> 
                                     <textarea id="ta2" rows="3" class="form-control" required></textarea>
                                         <div class="row">
-                                            <div class="col-sm-12">
+                                            <div class="col-xs-12">
                                                 <section aria-label="color claim">
                                                     <div class="card-text">
                                                         <div role="heading" aria-level="2">
