--- a/owner_info_review.html
+++ b/owner_info_review.html
@@ -190,7 +190,7 @@
                                             <div class="panel panel-default">
                                                 <div class="panel-heading">
                                                   	<div class="row">
-                                                        <div class="col-xs-12 col-sm-9 col-md-10">
+                                                        <div class="col-xs-9 col-md-10">
                                                             <div class="row">
                                                                 <div class="col-xs-12 col-md-4">
                                                                     <p class="panel-title number weight600"><button type="button" class="btn btn-link Accordion-trigger" data-toggle="collapse" data-target="#jbabos" aria-controls="jbabos" aria-expanded="false" id="jbabosbtn"><span class="glyphicon glyphicon-triangle-right"></span><span class="glyphicon glyphicon-triangle-bottom visuallyremoved"></span> Jackie Babos</button></p>
@@ -349,7 +349,7 @@
                                                                 </div>
                                                             </div>
                                                         </div>
-                                                        <div class="col-xs-12 col-sm-3 col-md-2 inlinebuttons btn-group btn-group-justified" aria-label="edit or remove contact">
+                                                        <div class="col-xs-3 col-md-2 inlinebuttons btn-group btn-group-justified" aria-label="edit or remove contact">
                                                             <div class="btn-group">
                                                                 <button type="button" class="btn btn-sm btn-success" aria-label="edit contact">Edit</button>
                                                             </div>
@@ -366,7 +366,7 @@
                                             <div class="panel panel-default">
                                                 <div class="panel-heading">
                                                   	<div class="row">
-                                                        <div class="col-xs-12 col-sm-9 col-md-10">
+                                                        <div class="col-xs-9 col-md-10">
                                                             <div class="row">
                                                                 <div class="col-xs-12 col-md-4">
                                                                     <p class="panel-title number weight600"><button type="button" class="btn btn-link Accordion-trigger" data-toggle="collapse" data-target="#jgold" aria-controls="jgold" aria-expanded="false" id="jgoldbtn"><span class="glyphicon glyphicon-triangle-right"></span><span class="glyphicon glyphicon-triangle-bottom visuallyremoved"></span> Jacob Goldstein</button></p>
@@ -525,7 +525,7 @@
                                                                 </div>
                                                             </div>
                                                         </div>
-                                                        <div class="col-xs-12 col-sm-3 col-md-2 inlinebuttons btn-group btn-group-justified" aria-label="edit or remove contact">
+                                                        <div class="col-xs-3 col-md-2 inlinebuttons btn-group btn-group-justified" aria-label="edit or remove contact">
                                                             <div class="btn-group">
                                                                 <button type="button" class="btn btn-sm btn-success" aria-label="edit contact">Edit</button>
                                                             </div>
