--- a/review_application.html
+++ b/review_application.html
@@ -345,40 +345,40 @@
                                                 </div>
                                                 <div class="col-xs-12">
                                                     <div class="row">
-                                                        <div class="col-xs-12 col-sm-4">
+                                                        <div class="col-xs-4">
                                                         	<h4>Owner</h4>
                                                         </div>
-                                                        <div class="col-xs-12 col-sm-8">
+                                                        <div class="col-xs-8">
 															<p class="weight600">John Smith</p>
                                                         </div>
                                                     </div>
                                                 </div>
                                                 <div class="col-xs-12">
                                                     <div class="row">
-                                                        <div class="col-xs-12 col-sm-4">
+                                                        <div class="col-xs-4">
                                                             <h4>Entity type</h4>
                                                         </div>
-                                                        <div class="col-xs-12 col-sm-8">
+                                                        <div class="col-xs-8">
                                                         	<p class="weight600">Individual</p>
                                                         </div>
                                                     </div>
                                                 </div>
                                                 <div class="col-xs-12">
                                                     <div class="row">
-                                                        <div class="col-xs-12 col-sm-4">
+                                                        <div class="col-xs-4">
                                                             <h4>Citizenship</h4>
                                                         </div>
-                                                        <div class="col-xs-12 col-sm-8">
+                                                        <div class="col-xs-8">
                                                         	<p class="weight600">United States of America</p>
                                                         </div>
                                                     </div>
                                                	</div>
                                                 <div class="col-xs-12">
                                                     <div class="row">
-                                                        <div class="col-xs-12 col-sm-4">
+                                                        <div class="col-xs-4">
                                                             <h4>Email address</h4>
                                                         </div>
-                                                        <div class="col-xs-12 col-sm-8 checkmargin">
+                                                        <div class="col-xs-8 checkmargin">
                                                         	<p class="weight600">john.smith@gmail.com</p>
                                                             <input class="form-check-input checkmark" type="checkbox" value="authorizedemail" tabindex="0" aria-labelledby="authem" id="authemail">
                                                            	<label class="form-check-label form-check" for="authemail" id="emauth"><span class="radio notspecial" id="authem">Authorized</span></label>
@@ -387,10 +387,10 @@
                                                 </div>
                                                 <div class="col-xs-12">
                                                     <div class="row">
-                                                        <div class="col-xs-12 col-sm-4">
+                                                        <div class="col-xs-4">
                                                             <h4>Address</h4>
                                                         </div>
-                                                        <div class="col-xs-12 col-sm-8">
+                                                        <div class="col-xs-8">
                                                         	<p class="weight600">123 Main Street  <br>Alexandria VA 22313</p>
                                                         </div>
                                                     </div>
@@ -399,7 +399,7 @@
                                             </section>
                                             <div class="col-xs-12">
                                                 <div class="row">
-                                                    <div class="col-xs-12" role="group" aria-label="accept">
+                                                    <div class="form-group form-group-md col-xs-12" aria-label="accept">
                                                         <div class="col-xs-12">
                                                             <button type="button" class="btn-sm btn-success add ctr" id="acceptreview">Accept</button>
                                                         </div>
