--- a/additional_information.html
+++ b/additional_information.html
@@ -401,12 +401,12 @@
                                                         <div id="yeswholeother" class="form-group"><!--toggle 'yes' radio-->
                                                             <div class="form-group form-group-md">
                                                                 <div class="row">
-                                                                    <div class="col-xs-12 col-md-6 form-group form-group-md matchlabelheightdiv">
+                                                                    <div class="col-xs-12 col-md-6 form-group form-group-md">
                                                                         <label for="otherformfirst" class="matchlabelheight">Provide date of first use in another form:</label>
                                                                         <input type="date" class="form-control" id="otherformfirst" name="otherformfirst">
                                                                     </div>
                                                                     <div class="col-xs-12 col-md-6 form-group form-group-md">
-                                                                        <label for="otherformcommerce" id="getit">Provide date of first use in commerce in another form:</label>
+                                                                        <label for="otherformcommerce" id="getit" class="matchlabelheight">Provide date of first use in commerce in another form:</label>
                                                                         <input type="date" class="form-control" id="otherformcommerce" name="otherformcommerce">
                                                                     </div>
                                                                 </div>
