--- a/filing_basis_abde.html
+++ b/filing_basis_abde.html
@@ -200,28 +200,38 @@
                                             <div class="row">
                                                 <section aria-label="class image and description">
                                                     <div class="col-xs-12">
-                                                        <p id="upimage">Provide an image of your specimen:</p>
-                                                        <div>
-                                                            <div class="form-group form-group-md hidethis">
-                                                                <label class="small upload-drop-zone" for="specimenfile" id="upimg"><div class="fileDisplayArea"><span class="glyphicon glyphicon-upload" aria-hidden="true"></span> <br>Select File</div></label>
-                                                                <input type="file" id="specimenfile" name="specimenfileupload" class="form-control" aria-labelledby="upimg upimage">
-                                                            </div>
-                                                            <div class="row">
-                                                                <div class="js-upload-finished col-xs-12">
-                                                                    <p id="uploadedfile">Selected files</p>
-                                                                    <div class="list-group" id="filedata">
-                                                                        <div class="list-group-item list-group-item-success fileholder col-xs-12" role="alert"></div>
+                                                    	<p id="commerce">How would you like to provide your specimen(s)?</p>                                            				
+                                                        <div role="radiogroup" aria-labelledby="commerce" class="form-group form-group-md">
+                                                            <label for="inlineRadio057" class="radio-inline radiocontainer block"><input type="radio" name="numberspecimen" id="inlineRadio057" value="yes" tabindex="0"><span class="checkmark"></span>One specimen for all the goods/services within this class.</label>
+                                                            <label for="inlineRadio058" class="radio-inline radiocontainer block"><input type="radio" name="numberspecimen" id="inlineRadio058" value="no" tabindex="0"><span class="checkmark"></span>One specimen for each good/service within this class.</label>
+                                                        </div><!--END radiogroup-->
+                                                        <div id="yesonespecimen" class="row form-group form-group-md"><!--toggle 'yes' radio-->
+                                                            <div class="col-xs-12 form-group form-group-md">
+                                                                <p id="upimage">Provide an image of your specimen:</p>
+                                                                <div>
+                                                                    <div class="form-group form-group-md hidethis">
+                                                                        <label class="small upload-drop-zone" for="specimenfile" id="upimg"><div class="fileDisplayArea"><span class="glyphicon glyphicon-upload" aria-hidden="true"></span> <br>Select File</div></label>
+                                                                        <input type="file" id="specimenfile" name="specimenfileupload" class="form-control" aria-labelledby="upimg upimage">
                                                                     </div>
-                                                                </div>
-                                                            </div>
-                                                            <div class="row">
-                                                                <div class="col-xs-12">
-                                                                    <div class="col-xs-12 form-group form-group-md">
-                                                                        <button type="button" class="btn-sm btn-success add ctr" aria-label="submit selected files">Submit</button>
+                                                                    <div class="row">
+                                                                        <div class="js-upload-finished col-xs-12">
+                                                                            <p id="uploadedfile">Selected files</p>
+                                                                            <div class="list-group" id="filedata">
+                                                                                <div class="list-group-item list-group-item-success fileholder col-xs-12" role="alert"></div>
+                                                                            </div>
+                                                                        </div>
                                                                     </div>
-                                                                </div>
+                                                                    <div class="row">
+                                                                        <div class="col-xs-12">
+                                                                            <div class="col-xs-12 form-group form-group-md">
+                                                                                <button type="button" class="btn-sm btn-success add ctr" aria-label="submit selected files">Submit</button>
+                                                                            </div>
+                                                                        </div>
+                                                                    </div>
+                                                                </div><!-- Drop Zone -->
+                                                                
                                                             </div>
-                                                        </div><!-- Drop Zone -->
+                                                       	</div>
                                                     </div>
                                                     <div class="col-xs-12">
                                                         <label for="specdescript">Provide a description of your specimen:</label> 
@@ -237,19 +247,19 @@
                                                         </div>
                                                         <p id="commerce">Are you currently using the mark on goods/services in commerce? <span class="label label-info subtle visuallyremoved">Reduced Fee</span></p>                                            				
                                                         <div role="radiogroup" aria-labelledby="commerce" class="form-group form-group-md">
-                                                            <label for="inlineRadio25" class="radio-inline radiocontainer"><input type="radio" name="commerceadio" id="inlineRadio25" value="yes" tabindex="0"><span class="checkmark"></span>Yes</label>
-                                                            <label for="inlineRadio26" class="radio-inline radiocontainer"><input type="radio" name="commerceadio" id="inlineRadio26" value="no" tabindex="0"><span class="checkmark"></span>No</label>
+                                                            <label for="inlineRadio25" class="radio-inline radiocontainer"><input type="radio" name="commerceadio" id="inlineRadio25" value="yesbar" tabindex="0"><span class="checkmark"></span>Yes</label>
+                                                            <label for="inlineRadio26" class="radio-inline radiocontainer"><input type="radio" name="commerceadio" id="inlineRadio26" value="nobar" tabindex="0"><span class="checkmark"></span>No</label>
                                                         </div><!--END radiogroup-->
                                                         <div id="yescommerce" class="row form-group form-group-md"><!--toggle 'yes' radio-->
                                                             <div class="col-xs-12 col-md-6 form-group form-group-md">
-                                                                <label for="connection-date">When did you first use the mark in connection with the goods/services? <a href="#" data-toggle="tooltip" title="Enter the date on which the mark was first used with the goods or services." class="glyphicon glyphicon-info-sign test" data-placement="right"></a> <span class="label label-info subtle visuallyremoved">Reduced Fee</span></label>
+                                                                <label for="connection-date" class="matchlabelheighttwo">When did you first use the mark in connection with the goods/services? <a href="#" data-toggle="tooltip" title="Enter the date on which the mark was first used with the goods or services." class="glyphicon glyphicon-info-sign test" data-placement="right"></a> <span class="label label-info subtle visuallyremoved">Reduced Fee</span></label>
                                                                 <input type="date" class="form-control" id="connection-date" name="connectiondate" value="">
                                                             </div> 
-                                                            <div class="col-xs-12 col-md-6 form-group form-group-md matchlabelheighttwodiv">
+                                                            <div class="col-xs-12 col-md-6 form-group form-group-md">
                                                                 <label for="firstconnection-date" class="matchlabelheighttwo">When did you first use the mark in Commerce? <a href="#" data-toggle="tooltip" title="Enter the date on which the mark was first used in commerce, such as commerce between states or between the United States and another country." class="glyphicon glyphicon-info-sign test" data-placement="right"></a> <span class="label label-info subtle visuallyremoved">Reduced Fee</span></label>
                                                                 <input type="date" class="form-control" id="firstconnection-date" name="firstconnectiondate" value="">
                                                             </div>
-                                                            <div class="col-xs-12 form-group form-group-md">
+                                                            <div class="col-xs-12 form-group form-group-md individualspecimen">
                                                                 <input class="form-check-input checkmark" type="checkbox" value="specimentwo" tabindex="0" id="specimentwo">
                                                                 <label class="form-check-label form-check" for="specimentwo"><span class="radio notspecial">Check here to provide a specimen for this individual good/service.</span></label>
                                                             </div>
@@ -410,23 +420,23 @@
                                                         </div>
                                                         <p id="connection">Are you currently using the mark on goods/services in commerce? <span class="label label-info subtle visuallyremoved">Reduced Fee</span></p>                                                    
                                                         <div role="radiogroup" aria-labelledby="connection" class="form-group form-group-md">
-                                                            <label for="inlineRadio29" class="radio-inline radiocontainer"><input type="radio" name="commerceadiotwo" id="inlineRadio29" value="yes" tabindex="0"><span class="checkmark"></span>Yes</label>
-                                                            <label for="inlineRadio30" class="radio-inline radiocontainer"><input type="radio" name="commerceadiotwo" id="inlineRadio30" value="no" tabindex="0"><span class="checkmark"></span>No</label>
+                                                            <label for="inlineRadio29" class="radio-inline radiocontainer"><input type="radio" name="commerceadiotwo" id="inlineRadio29" value="yesliquid" tabindex="0"><span class="checkmark"></span>Yes</label>
+                                                            <label for="inlineRadio30" class="radio-inline radiocontainer"><input type="radio" name="commerceadiotwo" id="inlineRadio30" value="noliquid" tabindex="0"><span class="checkmark"></span>No</label>
                                                         </div><!--END radiogroup-->
                                                         <div id="yesconnection" class="row form-group form-group-md"><!--toggle 'yes' radio-->
                                                             <div class="col-xs-12 col-md-6 form-group form-group-md">
-                                                                <label for="connection-date">When did you first use the mark in connection with the goods/services? <a href="#" data-toggle="tooltip" title="Enter the date on which the mark was first used with the goods or services." class="glyphicon glyphicon-info-sign test" data-placement="right"></a> <span class="label label-info subtle visuallyremoved">Reduced Fee</span></label>
+                                                                <label for="connection-date" class="matchlabelheighttwo">When did you first use the mark in connection with the goods/services? <a href="#" data-toggle="tooltip" title="Enter the date on which the mark was first used with the goods or services." class="glyphicon glyphicon-info-sign test" data-placement="right"></a> <span class="label label-info subtle visuallyremoved">Reduced Fee</span></label>
                                                                 <input type="date" class="form-control" id="connection-date" name="connectiondate" value="">
                                                             </div> 
-                                                            <div class="col-xs-12 col-md-6 form-group form-group-md matchlabelheighttwodiv">
+                                                            <div class="col-xs-12 col-md-6 form-group form-group-md">
                                                                 <label for="firstconnection-date" class="matchlabelheighttwo">When did you first use the mark in Commerce? <a href="#" data-toggle="tooltip" title="Enter the date on which the mark was first used in commerce, such as commerce between states or between the United States and another country." class="glyphicon glyphicon-info-sign test" data-placement="right"></a> <span class="label label-info subtle visuallyremoved">Reduced Fee</span></label>
                                                                 <input type="date" class="form-control" id="firstconnection-date" name="firstconnectiondate" value="">
                                                             </div>
-                                                            <div class="col-xs-12 form-group form-group-md">
-                                                                <input class="form-check-input checkmark" type="checkbox" value="specimentwo" tabindex="0" id="specimentwo">
-                                                                <label class="form-check-label form-check" for="specimentwo"><span class="radio notspecial">Check here to provide a specimen for this individual good/service.</span></label>
+                                                            <div class="col-xs-12 form-group form-group-md individualspecimen">
+                                                                <input class="form-check-input checkmark" type="checkbox" value="specimenthree" tabindex="0" id="specimenthree">
+                                                                <label class="form-check-label form-check" for="specimenthree"><span class="radio notspecial">Check here to provide a specimen for this individual good/service.</span></label>
                                                             </div>
-                                                            <div id="yesspecimentwo" class="form-group form-group-md"><!--toggle 'yes' radio-->
+                                                            <div id="yesspecimenthree" class="form-group form-group-md"><!--toggle 'yes' radio-->
                                                                 <div class="col-xs-12">
                                                                     <p id="upimagefour">Provide an image of your specimen:</p>
                                                                     <div class="form-group form-group-md hidethis">
