--- a/payment.html
+++ b/payment.html
@@ -616,7 +616,7 @@
                                                    	</div>
                                                     <div class="col-xs-12">
                                                         <div class="row">
-                                                            <div class="col-xs-12" role="group" aria-label="submit">
+                                                            <div class="form-group form-group-md col-xs-12" role="group" aria-label="submit">
                                                                 <div class="col-xs-12">
                                                                 	<button type="button" class="btn-sm btn-success add ctr">Submit</button>
                                                                 </div>
